# TheResumeManager

./: .docker-compose.yml.swp  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/0fdde814e4c3/: details.json
services/api/: .dockerignore  .gitignore  pyproject.toml
services/api/src/theresumemanager/: main.py
services/api/src/theresumemanager/api/routes/figmaRoute/: figmaGetRoute.py
services/api/src/theresumemanager/api/routes/resumeRoute/: resumeGenerateRoute.py  resumeGetRoute.py  resumeUpdateRoute.py
services/api/src/theresumemanager/core/functions/cleanup/: fileCleanupFunction.py
services/api/src/theresumemanager/data/database/: DB.py  connection.py
services/api/src/theresumemanager/models/: ErrorResponse.py  Request.py
services/api/src/theresumemanager/resources/: config.py  designs.json  index.html  paths.json  strings.json
services/api/src/theresumemanager/resources/static/: index.html
services/db/: init.sql
src/theresumemanager/: main.py
src/theresumemanager/api/routes/resumeRoute/: resumeGenerateRoute.py  resumeGetRoute.py
src/theresumemanager/core/functions/figma/: figmaFunction.py
src/theresumemanager/core/functions/resume/: resumeFunction.py
src/theresumemanager/core/tools/dictionary/: dictTools.py
src/theresumemanager/core/tools/hashing/: hashingTools.py
src/theresumemanager/core/tools/pdf/: PdfTools.py
src/theresumemanager/core/tools/qrcode/: qrcodeTools.py
src/theresumemanager/models/: Response.py
src/theresumemanager/resources/: config.py  index.html  strings.json  strings.py
(+11 files in other folders)
